@@ -35,7 +35,6 @@
 
 #include <sysdep.h>
 
-#include <asm/unistd.h>
 #include <asm/fpu.h>
 
 /*
